<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">内涵</string>
    <string name="action_settings">Settings</string>
    <string name="main_top_itm_text">段子</string>
    <string name="main_top_itm_image">图片</string>
    <string name="main_top_itm_check">审核</string>
    <string name="main_top_itm_activity">活动</string>
    <string name="main_top_itm_my">我的</string>

</resources>