<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <FrameLayout
        android:id="@+id/main_fragment_container"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" >
    </FrameLayout>

    <RadioGroup
        android:id="@+id/main_top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@drawable/bg_tabbar" >

        <RadioButton
            android:id="@+id/main_top_itm_text"
            style="@style/main_tab_item"
            android:checked="true"
            android:drawableTop="@drawable/main_tab_item_essay_bg"
            android:text="@string/main_top_itm_text" />

        <RadioButton
            android:id="@+id/main_top_itm_image"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_item_image_bg"
            android:text="@string/main_top_itm_image" />

        <RadioButton
            android:id="@+id/main_top_itm_check"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_item_review_bg"
            android:text="@string/main_top_itm_check" />

        <RadioButton
            android:id="@+id/main_top_itm_activity"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_item_activity_bg"
            android:text="@string/main_top_itm_activity" />

        <RadioButton
            android:id="@+id/main_top_itm_my"
            style="@style/main_tab_item"
            android:drawableTop="@drawable/main_tab_item_mine_bg"
            android:text="@string/main_top_itm_my" />
    </RadioGroup>

</LinearLayout>